Fix for ORCID icon bottom being cut off

--- a/app/assets/sass/dri/modules/_dri_object.scss
+++ b/app/assets/sass/dri/modules/_dri_object.scss
@@ -266,7 +266,7 @@ dl.dri_object_metadata_readview {
             color: $dri_midgrey;
         }
         span.orcid a {
-            display: inline;
+            display: inline-block;
             margin: 0 5px 0 0;
         }
         a:hover {
